# group-lasso

./: .bumpversion.cfg  .coveralls.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  changelog.rst  group_lasso_fista.py  pyproject.toml  requirements-dev.txt  requirements.txt  sample_group_lasso.py  sample_logistic_group_lasso.py  setup.cfg  setup.py  test_group_lasso.py  testfile.py  tox.ini
.github/workflows/: Tests.yml  python-package.yml
docs/: Makefile  api_reference.rst  conf.py  examples.rst  index.rst  installation.rst  maths.rst  old_index.rst
examples/: example_MALDITOF.ipynb  example_group_lasso.py  example_group_lasso_pipeline.py  example_logistic_group_lasso.py  example_sparse_group_lasso.py  example_warm_start.py  sample_group_lasso.py  sample_logistic_group_lasso.py  sample_multinomial_group_lasso.py  utils.py
group_lasso/: __init__.py  _fista.py  _group_lasso.py  _group_lasso_fista.py  _singular_values.py  _subsampling.py  _utils.py  group_lasso_fista.py
group_lasso/test/: test_group_lasso.py  test_singular_values.py  test_subsampling.py
src/group_lasso/: __init__.py  _fista.py  _group_lasso.py  _singular_values.py  _subsampling.py  utils.py
test/: test_fista.py  test_group_lasso.py  test_singular_values.py  test_subsampling.py  test_utils.py
