[metadata]
name = group-lasso
version = 1.0.0
license = MIT
description = Fast group lasso regularised linear models in a sklearn-style API.
long_description = file: README.rst
author = Yngve Mardal Moe
author_email = yngve.m.moe@gmail.com

[options]
packages = find:src
package_dir = 
    =src
include_package_data = True
install_requires = 
    numpy
    scikit-learn

[options.extras_require]
test = pytest
