[metadata]
name = group-lasso
version = 1.0.0
license = MIT
description = Fast group lasso regularised linear models in a sklearn-style API.
long_description = file: README.rst
author = Yngve Mardal Moe
author_email = yngve.m.moe@gmail.com
classifiers = 

[options]
packages = find:
package_dir = 
    =src
include_package_data = True
install_requires = 
	numpy
	scikit-learn

[options.packages.find]
where=src

[bumpversion]
current_version = 1.0.0
commit = True
tag = True

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}

[bumpversion:file:mask_stats/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:docs/conf.py]
search = release = "{current_version}"
replace = release = "{new_version}"

