[bumpversion]
current_version = 1.1.1
commit = True
tag = True

[metadata]
name = group-lasso
version = 1.1.0
license = MIT
description = Fast group lasso regularised linear models in a sklearn-style API.
long_description = file: README.rst
author = Yngve Mardal Moe
author_email = yngve.m.moe@gmail.com
classifiers = 

[options]
packages = find:
package_dir = 
	=src
include_package_data = True
install_requires = 
	numpy
	scikit-learn

[options.packages.find]
where = src

[bumpversion:file:setup.cfg]
search = {current_version}
replace = {new_version}

[bumpversion:file:src/group_lasso/__init__.py]
search = {current_version}
replace = {new_version}

[bumpversion:file:docs/conf.py]
search = {current_version}
replace = {new_version}

